--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,8 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Audiowide|Fredericka+the+Great&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css" type="text/css">
+        <script src="https://kit.fontawesome.com/e3637978fe.js"></script>
+        <link rel="stylesheet" href="styles/styles.css" type="text/css">
     <title>Task</title>
      <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -24,7 +24,7 @@
         
 </head>
 
-<body>
+<body class= "bg-dark">
    {{{ body }}}
 </body>
 
