--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-dark bg-dark">
   <p class="navbar-brand text-white ">Team Organizer™</p>
   <form class="form-inline">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="button">Sign Out</button>
+    <a class="btn btn-outline-danger my-2 my-sm-0" role="button" aria-disabled="true" href="/logout" >Sign Out</a>
   </form>
 </nav>
 <!--Delete Modal For Projects-->
