--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,18 +4,20 @@
       </div>
     </div>
   </nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+  <div id="most-outter">
+  <div id="outter-div" >
+  <div id="login-form" class="container text-white">
+    <div class="row login-form bg-dark">
+      <div class="col-md-12">
         <h2>Login Form</h2>
         <form class="login">
           <div class="form-group">
             <label for="InputEmail">Email address</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
+            <input  type="email" class="form-control" id="email-input" placeholder="Email" autocomplete="off">
           </div>
           <div class="form-group">
             <label for="InputPassword">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
+            <input type="password" class="form-control" id="password-input" placeholder="Password" autocomplete="off">
           </div>
 
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
@@ -23,13 +25,16 @@
             <span>Error:</span> <span class="msg"></span>
           </div>
 
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-outline-success">Login</button>
         </form>
         <br />
-        <p>Or sign up <a href="/signup">here</a></p>
+        <p>Or sign up <a role="button" href="/signup" class="btn btn-outline-primary btn-sm">here</a></p>
       </div>
     </div>
   </div>
+</div>
+</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/login.js"></script>
+
