Retrieving data on 'members' html rendering.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,11 @@
-
+<div id="test"></div>
 <nav class="navbar navbar-dark bg-dark">
-  <p class="navbar-brand text-white ">Team Organizer™</p>
+  <p class="navbar-brand text-white ">&nbsp;&nbsp;Team Organizer™</p>
   <form class="form-inline">
     <button class="btn btn-outline-success my-2 my-sm-0" type="button">Sign Out</button>
   </form>
 </nav>
+
 <!--Delete Modal For Projects-->
 <div class="modal" tabindex="-1" role="dialog" id="deleteProjectModal">
   <div class="modal-dialog" role="document">
@@ -437,11 +438,13 @@
 {{!-- Nacho ===================================================== --}}
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
   integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+
 <script src="js/app.js"></script>
+<script src="js/members.js"></script>
