--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,8 @@
 <div id="test"></div>
 <nav class="navbar navbar-dark bg-dark">
-  <p class="navbar-brand text-white ">&nbsp;&nbsp;Team Organizer™</p>
+  {{!-- Elvan --}}
+  <p id="userNameBanner" class="navbar-brand text-white "></p>
+  {{!-- Elvan added id="userNameBaner" --}}
   <form class="form-inline">
     <a class="btn btn-outline-danger my-2 my-sm-0" role="button" aria-disabled="true" href="/logout" >Sign Out</a>
   </form>
@@ -391,16 +393,10 @@
           </div>
 
           <div class="card-body bg-dark overflow-auto" style="min-height: 60vh">
-            <div class='card-columns'>
-              <!--Projects Card Inside-->
-              <div class="card bg-dark text-white projectCard" style=" margin:5px; min-width: 120px" data-id='3'>
-                <div class="card-header">Project #1</div>
-                <div class="card-body">
-                  <h6 class="card-title">Update Github portfolio</h6>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-              <!--------------------------->
+              {{!-- Elvan --}}
+            <div id="projectDiv" class='card-columns'>
+              {{!-- Elvan added id="projectDiv"  --}}
+              {{!-- Elvan is adding project cards from data --}}
             </div>
           </div>
 
