--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -395,7 +395,7 @@
           <div class="card-body bg-dark overflow-auto" style="min-height: 60vh">
             {{!-- Elvan --}}
             <div id="projectDiv" class='card-columns'>
-              <!--Projects Card Inside-->
+              {{!-- <!--Projects Card Inside-->
               <div class="card bg-dark text-white projectCard" style=" margin:5px; min-width: 120px" data-id='3'>
                 <div class="card-header">Project #1</div>
                 <div class="card-body">
@@ -403,25 +403,7 @@
                   <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
               </div>
-              <!--------------------------->
-              <!--Projects Card Inside-->
-              <div class="card bg-dark text-white projectCard" style=" margin:5px; min-width: 120px" data-id='3'>
-                <div class="card-header">Project #1</div>
-                <div class="card-body">
-                  <h6 class="card-title">Update Github portfolio</h6>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-              <!--------------------------->
-              <!--Projects Card Inside-->
-              <div class="card bg-dark text-white projectCard" style=" margin:5px; min-width: 120px" data-id='3'>
-                <div class="card-header">Project #1</div>
-                <div class="card-body">
-                  <h6 class="card-title">Update Github portfolio</h6>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-              <!--------------------------->
+              <!---------------------------> --}}
               {{!-- Elvan added id="projectDiv"  --}}
               {{!-- Elvan is adding project cards from data --}}
             </div>
