--- a/views/old/login.handlebars
+++ b/views/old/login.handlebars
@@ -5,7 +5,7 @@
     </div>
   </nav>
   <div id="most-outter">
-  <div id="outter" >
+  <div id="outter-div" >
   <div id="login-form" class="container text-white">
     <div class="row login-form bg-dark">
       <div class="col-md-12">
@@ -13,11 +13,11 @@
         <form class="login">
           <div class="form-group">
             <label for="InputEmail">Email address</label>
-            <input  type="email" class="form-control" id="email-input" placeholder="Email">
+            <input  type="email" class="form-control" id="email-input" placeholder="Email" autocomplete="off">
           </div>
           <div class="form-group">
             <label for="InputPassword">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
+            <input type="password" class="form-control" id="password-input" placeholder="Password" autocomplete="off">
           </div>
 
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
