--- a/views/old/signup.handlebars
+++ b/views/old/signup.handlebars
@@ -5,7 +5,6 @@
     </div>
   </nav>
   <div id="most-outter">
-    <div id="outter">
   <div class="container text-white">
     <div class="row login-form bg-dark">
       <div class="col">
@@ -39,18 +38,16 @@
         </form>
         <br />
 
-<div id="pswd_info" >
-            <h6>Password must have:</h6>
+<div id="pswd_info">
+            <h6>Password must meet the following requirements:</h6>
                 <p id="letter" class="invalid">At least <strong>one letter</strong></p>
                 <p id="capital" class="invalid">At least <strong>one capital letter</strong></p>
                 <p id="number" class="invalid">At least <strong>one number</strong></p>
                 <p id="length" class="invalid">Be at least <strong>8 characters</strong></p>
-       
         </div>
         <p>Or log in <a href="/" role="button" class="btn btn-outline-primary btn-sm">here</a></p>
       </div>
     </div>
-  </div>
   </div>
 </div>
 
