--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -401,7 +401,7 @@
             <span class='display-4'>Projects </span>
             <button class='btn btn-secondary  projectDel' style='float: right;margin:0 2px'><i
                 class="fa fa-trash-o fa-4" aria-hidden="true"></i></button>
-            <button class='btn btn-secondary  projectAdd' style='float: right;;margin:0 2px'><i class="fa fa-plus fa-4"
+            <button id="projectAddButton" class='btn btn-secondary  projectAdd' style='float: right;;margin:0 2px'><i class="fa fa-plus fa-4"
                 aria-hidden="true"></i></button>
           </div>
 
