--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -403,13 +403,13 @@
             <span class='display-4'>Projects </span>
             <button class='btn btn-secondary  projectDel' style='float: right;margin:0 2px'><i
                 class="fa fa-trash-o fa-4" aria-hidden="true"></i></button>
-            <button id="projectAddButton" class='btn btn-secondary  projectAdd' style='float: right;;margin:0 2px'><i
-                class="fa fa-plus fa-4" aria-hidden="true"></i></button>
+            <button id="projectAddButton" class='btn btn-secondary  projectAdd' style='float: right;;margin:0 2px'><i class="fa fa-plus fa-4"
+                aria-hidden="true"></i></button>
           </div>
 
           <div class="card-body bg-dark overflow-auto" style="max-height: 60vh">
             {{!-- Elvan --}}
-            <div id="projectDiv" class='card-columns'>
+            <div id="projectDiv" class='card-columns row'>
               {{!-- <!--Projects Card Inside-->
               <div class="card bg-dark text-white projectCard" style=" margin:5px; min-width: 120px" data-id='3'>
                 <div class="card-header">Project #1</div>
