--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,11 +13,11 @@
         <form class="login">
           <div class="form-group">
             <label for="InputEmail">Email address</label>
-            <input  type="email" class="form-control" id="email-input" placeholder="Email">
+            <input  type="email" class="form-control logsign-field" id="email-input" placeholder="Email">
           </div>
           <div class="form-group">
             <label for="InputPassword">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
+            <input type="password" class="form-control logsign-field" id="password-input" placeholder="Password">
           </div>
 
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
