--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,19 +13,19 @@
         <form class="signup">
  <div class="form-group" autocomplete="off">
             <label for="InputName" autocomplete="off">Your Name</label>
-            <input type="text" class="form-control" id="name-input" placeholder="John Doe" autocomplete="off">
+            <input type="text" class="form-control logsign-field" id="name-input" placeholder="John Doe" autocomplete="off">
           </div>
 <div class="form-group">
             <label for="InputPhone">Your Phone Number</label>
-            <input type="tel" class="form-control" id="phone-input" placeholder="+12 123 123 1234" autocomplete="off">
+            <input type="tel" class="form-control logsign-field" id="phone-input" placeholder="+12 123 123 1234" autocomplete="off">
           </div>
           <div class="form-group">
             <label for="InputEmail">Email address</label>
-            <input type="text" class="form-control" id="email-input" placeholder="you@domain.com" autocomplete="off">
+            <input type="text" class="form-control logsign-field" id="email-input" placeholder="you@domain.com" autocomplete="off">
           </div>
           <div class="form-group">
             <label for="InputPassword">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="password" autocomplete="off">
+            <input type="password" class="form-control logsign-field" id="password-input" placeholder="password" autocomplete="off">
           
           </div>
 
