add borders to projects

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -437,9 +437,9 @@
             <button class='btn btn-secondary categoryAdd' style='float: right;margin:0 2px'><i class="fa fa-plus fa-4"
                 aria-hidden="true"></i></button>
             <h3 class='display-4'>Categories</h3>
-            <h5 class='display-3'>For Project #1</h4>
+            <h5 class='display-3'>For <span id='forProject'></span></h4>
           </div>
-          <div class="card-body bg-dark overflow-auto" style="height: 60vh">
+          <div class="card-body bg-dark overflow-auto" id='categoryBody' style="height: 60vh">
             <!--Categories Card Inside-->
             <div class="card bg-secondary text-white categoryCard" style='margin:5px' data-id="5">
               <div class="card-body">
