--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div id="test"></div>
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbarTitle">
   {{!-- Elvan --}}
-  <p id="userNameBanner" class="navbar-brand text-white "></p>
+  <p id="userNameBanner" class="navbar-brand"></p>
   {{!-- Elvan added id="userNameBaner" --}}
   <form class="form-inline">
     <a class="btn btn-outline-danger my-2 my-sm-0" role="button" aria-disabled="true" href="/logout">Sign Out</a>
