--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -28,7 +28,7 @@
           <button type="submit" class="btn btn-outline-success">Login</button>
         </form>
         <br />
-        <p>Or sign up <a role="button" href="/signup" class="btn btn-outline-primary btn-sm">here</a></p>
+        <p>Or sign up <a id="here" role="button" href="/signup" class="btn btn-outline-primary btn-sm">here</a></p>
       </div>
     </div>
   </div>
