Adding changes to categories.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -403,8 +403,8 @@
             <span class='display-4'>Projects </span>
             <button class='btn btn-secondary  projectDel' style='float: right;margin:0 2px'><i
                 class="fa fa-trash-o fa-4" aria-hidden="true"></i></button>
-            <button id="projectAddButton" class='btn btn-secondary  projectAdd' style='float: right;;margin:0 2px'><i class="fa fa-plus fa-4"
-                aria-hidden="true"></i></button>
+            <button id="projectAddButton" class='btn btn-secondary  projectAdd' style='float: right;;margin:0 2px'><i
+                class="fa fa-plus fa-4" aria-hidden="true"></i></button>
           </div>
 
           <div class="card-body bg-dark overflow-auto" style="max-height: 60vh">
@@ -441,12 +441,15 @@
           </div>
           <div class="card-body bg-dark overflow-auto" id='categoryBody' style="height: 60vh">
             <!--Categories Card Inside-->
-            <div class="card bg-secondary text-white categoryCard" style='margin:5px' data-id="5">
+            <div id="categoryDiv">
+              {{!-- Manuel --}}
+              {{!-- <div class="card bg-secondary text-white categoryCard" style='margin:5px' data-id="5">
               <div class="card-body">
                 <h5 class="card-title">Designing</h5>
                 <h6 class="card-subtitle mb-2 text-white">Here we'll be managing all the concepts for the new web
                   application, just requirements nothing else.</h6>
               </div>
+            </div> --}}
             </div>
             <!----------------------------->
           </div>
