Retrieving Tasks at Category Card pressing.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -434,14 +434,14 @@
     <!--Category Card Side-->
     <div class="col-sm-6">
       <div class='row' style='margin:5px;'>
-        <div class="card bg-dark text-white" style="width:100rem max-height: 60vh; height: 60vh">
+        <div class="card bg-dark text-white" style="width:100rem; max-height: 60vh; height: 60vh">
           <div class="card-header">
             <button class='btn btn-secondary categoryDel' style='float: right;margin:0 2px'><i
                 class="fa fa-trash-o fa-4" aria-hidden="true"></i></button>
             <button class='btn btn-secondary categoryAdd' style='float: right;margin:0 2px'><i class="fa fa-plus fa-4"
                 aria-hidden="true"></i></button>
             <h3 class='display-4'>Categories</h3>
-            <h5 class='display-3'>For <span id='forProject'></span></h4>
+            <h5 class='display-3'><span id='forProject'></span></h4>
           </div>
           <div class="card-body bg-dark overflow-auto" id='categoryBody' style="height: 60vh">
             <!--Categories Card Inside-->
